--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,6 +1,6 @@
-primary_name: "Changguang Wu"
-secondary_name: "吴昌广"
-navbar_name: "Changguang Wu"
+primary_name: "Chengjian Li"
+secondary_name: "李成建"
+navbar_name: "Chengjian Li"
 
 # positions:
 # - logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
@@ -8,22 +8,22 @@ navbar_name: "Changguang Wu"
 # - name: Position 2 without logo
 
 
-email: "changguangwu@njust.edu.cn"
+email: "lichengjian@njust.edu.cn"
 # cv_link: link-to-your-cv-file
 # gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: cgwu1999
+github: Chengjian-Li
 # twitter: your_twitter_id  # Do not include the '@' symbol
-wechat_qrcode: /assets/images/etc/wechat.png
-wechat_prompt: >-
-  Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
+# wechat_qrcode: /assets/images/etc/wechat.png
+# wechat_prompt: >-
+#   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
 # linkedin: your-linked-in-id
 # orcid: 0000-0000-0000-0000
 
 short_bio_text_justify: false
 short_bio: >-
-  He received the B.E. degree in Internet of Things from the Anhui University, Anhui, China, in 2018. He is currently pursuing the Ph.D. degree in computer science and technology at Nanjing University of Science and Technology, Nanjing, China. His research interests include computer vision, and image processing.
+  He received the M.S. degree in Internet of Things from the Xi'an University of Technology, Xi'an, China, in 2018. He is currently pursuing the Ph.D. degree in computer science and technology at Nanjing University of Science and Technology, Nanjing, China. His research interests include computer vision, and image processing.
 
-portrait_url: /assets/images/photos/portrait.jpg
+portrait_url: /assets\images\photos/BingImageOfTheDay.jpg
 # portrait_caption: >-
 #   Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
