--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,8 +4,8 @@
 "Jinhui Tang":
   url: https://imag-njust.net/people/user/tangjinhui/
 
-"Jiangxin Dong":
-  url: https://imag-njust.net/people/user/dongjiangxin/
+# "Jiangxin Dong":
+#   url: https://imag-njust.net/people/user/dongjiangxin/
 
 "Chengjian Li":
   url: https://sjkwwf.github.io/ChengjianLi.github.io/
