--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -21,7 +21,7 @@ github: Chengjian-Li
 
 short_bio_text_justify: false
 short_bio: >-
-  He received the M.S. degree in Internet of Things from the Xi'an University of Technology, Xi'an, China, in 2018. He is currently pursuing the Ph.D. degree in computer science and technology at Nanjing University of Science and Technology, Nanjing, China. His research interests include computer vision, and image processing.
+  He received the M.S. degree in computer science and technology from the Xi'an University of Technology, Xi'an, China, in 2018. He is currently pursuing the Ph.D. degree in computer science and technology at Nanjing University of Science and Technology, Nanjing, China. His research interests include computer vision, and image processing.
 
 portrait_url: assets\images\photos\BingImageOfTheDay.jpg
 # portrait_caption: >-
